<?xml version="1.0" encoding="utf-8"?>
<resources>
 
<string name="app_name">Sport Recife App</string>
<string name="btn_noticia">Notícias</string>
<string name="btn_historia">História</string>
<string name="btn_redes">Redes Sociais</string>
<string name="btn_contato">Contato</string>
<string name="btn_titulos">Títulos</string>
<string name="lbl_nome">Danilo \&quot;dan1LoL\&quot; Monteiro Ribeiro</string>
<string name="lbl_mail">danilomonteiroo@gmail.com</string>
<string name="lbl_titulos"> ★ Campeão Brasileiro de Futebol da 1a Divisão - 1987 \n
 ★Campeão da Copa do Brasil de 2008\n
★Campeão Brasileiro de Futebol da 2a Divisão - 1990 \n
★ Tetracampeão de Futebol Profissional do Nordeste - 1968, 1970, 1994 e 2000 39 vezes \n
★Campeão Pernambucano de Futebol Profissional 1916, 1917, 1920, 1923, 1924, 1925, 1928, 1938, 1941, 1942, 1943, 1948, 1949, 1953, 1955, 1956, 1958, 1961, 1962, 1975, 1977, 1980, 1981, 1982, 1988, 1991, 1992, 1994, 1996, 1997, 1998, 1999, 2000, 2003, 2006, 2007, 2008, 2009 e 2010.
</string>

<string name="lbl_twitter">http://www.twitter.com/sportrecife</string>
<string name="lbl_facebook">http://www.facebook.com/sportclubdorecife</string>
<string name="lbl_youtube">http://www.youtube.com/tvsportrecife</string>
<string name="lbl_orkut">http://www.orkut.com.br/Main#Community?cmm=28289</string>
<string name="btn_campeonatos">Campeonatos</string>
<string name="btn_links">Links de Sites</string>
<string name="lbl_sportnet">http://www.sportnet.com.br</string>
<string name="lbl_meusport">http://www.meusport.com/</string>
<string name="lbl_pelosport">http://www.sportclub.com.br/</string>
<string name="lbl_blogdotorcedor">http://www.blogdotorcedor.com.br/</string>

<string name="btn_placar">Placar da rodada</string>
<string name="lbl_sportRecife">http://www.sportrecife.com.br</string>
</resources>
