<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@color/background"
>
<AbsoluteLayout
android:id="@+id/widget0"
android:layout_width="fill_parent"
android:layout_height="fill_parent"

android:background="@color/background">
>
<ImageView
android:id="@+id/img_sportnet"
android:layout_width="100px"
android:layout_height="91px"
android:src="@drawable/sportnet"
android:layout_x="12px"
android:layout_y="22px"
>
</ImageView>
<ImageView
android:id="@+id/img_sportclub"
android:layout_width="101px"
android:layout_height="32px"
android:src="@drawable/pelosporttudo"
android:layout_x="8px"
android:layout_y="114px"
>
</ImageView>
<ImageView
android:id="@+id/img_blogdotorcedor"
android:layout_width="101px"
android:layout_height="32px"
android:src="@drawable/blogdotrocedor"
android:layout_x="6px"
android:layout_y="175px"
>
</ImageView>

<ImageView
android:id="@+id/img_meuspor"
android:layout_width="101px"
android:layout_height="32px"
android:src="@drawable/meusport"
android:layout_x="6px"
android:layout_y="250px"
>
</ImageView>

<ImageView
android:id="@+id/img_sportrecife"
android:layout_width="101px"
android:layout_height="32px"
android:src="@drawable/sportrecife"
android:layout_x="6px"
android:layout_y="310px"
>
</ImageView>
<TextView
android:id="@+id/lbl_sportnet"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lbl_sportnet"
android:layout_x="135px"
android:layout_y="47px"
>
</TextView>
<TextView
android:id="@+id/lbl_sportclub"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lbl_pelosport"
android:layout_x="135px"
android:layout_y="124px"
>
</TextView>
<TextView
android:id="@+id/lbl_blogtorcedor"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lbl_blogdotorcedor"
android:layout_x="135px"
android:layout_y="190px"
>
</TextView>





<TextView android:layout_width="wrap_content" android:text="@string/lbl_meusport" android:id="@+id/lbl_meusport"
android:layout_height="wrap_content" android:layout_x="135px"
android:layout_y="250px"></TextView>

<TextView android:layout_width="wrap_content" android:text="@string/lbl_sportRecife" android:id="@+id/lbl_sportoficial"
android:layout_height="wrap_content" android:layout_x="135px"
android:layout_y="310px"></TextView>

</AbsoluteLayout>
</ScrollView>