<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout

android:id="@+id/widget0"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@color/background"
>
<ImageView
android:id="@+id/img_orkut"
android:layout_width="64px"
android:layout_height="64px"
android:layout_x="11px"
android:layout_y="25px"
android:src="@drawable/orkut"
>
</ImageView>
<TextView
android:id="@+id/lbl_orkut"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:text="@string/lbl_orkut"
android:layout_x="100px"
android:layout_y="49px"


>
</TextView>
<ImageView
android:id="@+id/img_face"
android:layout_width="45px"
android:layout_height="45px"
android:layout_x="10px"
android:layout_y="107px"
android:src="@drawable/facebook"
>
</ImageView>
<ImageView
android:id="@+id/img_youtube"
android:layout_width="64px"
android:layout_height="64px"
android:layout_x="8px"
android:layout_y="188px"
android:src="@drawable/youtube"
>
</ImageView>
<ImageView
android:id="@+id/img_twitter"
android:layout_width="64px"
android:layout_height="64px"
android:layout_x="7px"
android:layout_y="269px"
android:src="@drawable/twitter"
>
</ImageView>
<TextView
android:id="@+id/lbl_face"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:text="@string/lbl_facebook"
android:layout_x="100px"
android:layout_y="130px"

>
</TextView>
<TextView
android:id="@+id/lbl_youtube"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:text="@string/lbl_youtube"
android:layout_x="100px"
android:layout_y="211px"

>
</TextView>
<TextView
android:id="@+id/lbl_twitter"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:text="@string/lbl_twitter"
android:layout_x="100px"
android:layout_y="295px"

>
</TextView>
</AbsoluteLayout>
